syntax = "proto3";

package follower_service;

option go_package = "github.com/ebilsanta/social-network/backend/follower_service/proto";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service FollowerService {
  rpc AddUser (AddUserRequest) returns (google.protobuf.Empty) {}
  rpc GetFollowers (GetFollowersRequest) returns (GetFollowersResponse) {}
  rpc GetFollowing (GetFollowingRequest) returns (GetFollowingResponse) {}
  rpc AddFollower (AddFollowerRequest) returns (google.protobuf.Empty) {}
  rpc DeleteFollower (DeleteFollowerRequest) returns (google.protobuf.Empty) {}
  rpc CheckFollowing (CheckFollowingRequest) returns (CheckFollowingResponse) {}
}

message AddUserRequest {
  string id = 1;
}

message GetFollowersRequest {
  string id = 1;
  int32 page = 2;
  int32 limit = 3;
}

message GetFollowersResponse {
  repeated string data = 1;
  FollowerPaginationMetadata pagination = 2;
}

message GetFollowingRequest {
  string id = 1;
  int32 page = 2;
  int32 limit = 3;
}

message GetFollowingResponse {
  repeated string data = 1;
  FollowerPaginationMetadata pagination = 2;
}

message AddFollowerRequest {
  string followerID = 1;
  string followedID = 2;
}

message DeleteFollowerRequest {
  string followerID = 1;
  string followedID = 2;
}

message FollowerPaginationMetadata {
  int32 totalRecords = 1;
  int32 currentPage = 2;
  int32 totalPages = 3;
  google.protobuf.Int32Value nextPage = 4;
  google.protobuf.Int32Value prevPage = 5;
}

message CheckFollowingRequest {
  string followerID = 1;
  string followedID = 2;
}

message CheckFollowingResponse {
  bool following = 1;
}
